[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ty]
exclude = [
    "thingsboard_api_tools/typings/**",
    "**/typings/**"
]

[project]
dependencies = [
    "faker",
    "pydantic",
    "requests",
    "pytest",
    "pytz",
    "setuptools",
]
