[project]
name = "thingsboard_api_tools"
version = "0.5"
dependencies = [
    "faker",
    "pydantic",
    "requests",
    "pytest",
    "pytz",
    "setuptools",
]


[tool.pytest.ini_options]
# pythonpath = "src"
pythonpath = ["."]

addopts = [
    "--import-mode=importlib",
]

