[project]
name = "thingsboard_api_tools"
version = "0.5"
dependencies = [
    "faker",
    "pydantic",
    "requests",
    "pytest",
    "pytz",
    "setuptools",
    "python-dotenv"
]


[tool.pytest.ini_options]
# pythonpath = "src"
pythonpath = ["."]

addopts = [
    "--import-mode=importlib",
]

